--- a/package.json
+++ b/package.json
@@ -37,5 +37,6 @@
   },
   "devDependencies": {
     "gh-pages": "^2.2.0"
-  }
+  },
+  "homepage": "https://yuto0109mcu.github.io/React-FootballWeatherApp/"
 }
